--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="user-scalable=no">
         <link rel="icon" href="icon/icon.png" type="image/png">
         <link rel="apple-touch-icon" href="icon/icon.png">
-        <link rel="stylesheet" type="text/css" href="fonts/gamefont.css">
+        <!-- <link rel="stylesheet" type="text/css" href="fonts/gamefont.css"> -->
         <title>Dream Of The Truth</title>
     </head>
     <body style="background-color: black">
